# midas-journal-740

./: .gitignore  CMakeLists.txt  circle.yml  package.json  pnpm-lock.yaml  pyproject.toml
itkcuberille/: CMakeLists.txt  README.md  package.json  pixi.toml
itkcuberille/cuberille/: cuberille.cxx
test/Docker/: Dockerfile  test.sh
typescript/: package.json
typescript/test/node/: anti-alias-cuberille-test.js  common.js  cuberille-test.js
wasm/: CMakeLists.txt  itk_wasm_env.bash
wasm/anti-alias-cuberille/: CMakeLists.txt  anti-alias-cuberille.cxx
wasm/cuberille/: CMakeLists.txt  cuberille.cxx
wrapping/: itkCuberilleImageToMeshFilter.wrap
