cmake_minimum_required(VERSION 3.16.3)
project(Cuberille)

if(NOT ITK_SOURCE_DIR)
  find_package(ITK 5.2 REQUIRED)
  list(APPEND CMAKE_MODULE_PATH ${ITK_CMAKE_DIR})
  include(ITKModuleExternal)
  if(WASI OR EMSCRIPTEN)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
    add_subdirectory(wasm)
  endif()
else()
  itk_module_impl()
endif()
