cmake_minimum_required(VERSION 3.16.3)
project(Cuberille)

if(NOT ITK_SOURCE_DIR)
  find_package(ITK 5.2 REQUIRED)
  list(APPEND CMAKE_MODULE_PATH ${ITK_CMAKE_DIR})
  include(ITKModuleExternal)
  option(BUILD_ITK_WASM_PIPELINES "Build for WebAssembly pipelines" OFF)
  if(WASI OR EMSCRIPTEN OR BUILD_ITK_WASM_PIPELINES)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
    add_subdirectory(wasm)
  endif()
else()
  itk_module_impl()
endif()
